[gd_scene load_steps=4 format=3 uid="uid://doximpyevyuad"]

[ext_resource type="Script" path="res://scenes/door_collision.gd" id="1_78pde"]
[ext_resource type="PackedScene" uid="uid://4ht8f2pmearf" path="res://scenes/office_inside.tscn" id="2_i8kl1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2l2o4"]

[node name="Node2D" type="Node2D"]

[node name="player_detector" type="Area2D" parent="."]
position = Vector2(-17, 23)
script = ExtResource("1_78pde")
target_scene = ExtResource("2_i8kl1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detector"]
shape = SubResource("RectangleShape2D_2l2o4")

[connection signal="body_entered" from="player_detector" to="player_detector" method="_on_body_entered"]
[connection signal="body_exited" from="player_detector" to="player_detector" method="_on_body_exited"]
